--- a/src/sections/f.scss
+++ b/src/sections/f.scss
@@ -1,41 +1,32 @@
 @use '../lib/variables_mixins.scss' as *;
 
-
-.filters {
-    display: none;
-    flex-direction: column;
+.filter__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
     padding: 2rem;
     position: relative;
+    background-color: rgb(246, 241, 241);
 
     @include desktop {
-        
-        width: 80%;
-        border: 1px solid rgb(216, 216, 216);
-        
-        
-    }
-
-    &__title {
-        font-size: 1.4rem;
-        font-weight: 400;
-        margin-bottom: 1rem;
-
-        
+        width: 90%;
+        margin-left: 3rem;
+        border: 1px solid grey;
+        border-radius: 0.5rem;
+        box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
     }
 }
 
-
 .filter {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 
     @include desktop {
-        float: left;
-        width: 33.33%;
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
     }
 
     &__title {
-        font-size: 1rem;
-
+        font-size: 1.3rem;
     }
 }
 
@@ -45,30 +36,26 @@
         padding-bottom: 0.5rem;
     }
 }
-
-
 .rating {
 
-    @include desktop {
-        float: left;
-        width: 33.33%;
+    @include desktop { 
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        gap: 0.1rem;
     }
 
     &__box {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 0.5rem;
-        
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        gap: 0.1rem;
     }
 
     &__stars {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+        grid-column: 2 / 3;
+         grid-row: 2 / 3;
         gap: 0.25rem;
-                direction: rtl; //för att få stjärnorna till vänster lyser upp
-                cursor: pointer;
+        direction: rtl; //för att få stjärnorna till vänster lyser upp
+        cursor: pointer;
     }
 
     .fa-star {
@@ -80,25 +67,21 @@
         color: orange;
     }
 
-        .fa-star:hover,
-    .fa-star:hover ~ .fa-star {
-    color: orange;
-  }
+    .fa-star:hover,
+    .fa-star:hover~.fa-star {
+        color: orange;
+    }
 
     p {
         padding: 0 1rem;
-        
     }
-
-
 }
 
 .tags {
 
     @include desktop {
-        float: left;
-        width: 33.33%;
-        
+        grid-column: 3 / 4;
+         grid-row: 2 / 3;
     }
 
     .tag {
@@ -141,23 +124,21 @@
 
     //NYTT
     @include desktop {
-        width: 30rem;
+        width: 100rem;
     }
 }
 
 //FILTER CHALLENGES
-.filterBtn {
-    font-size: 1.1rem;
-    margin-bottom: 3rem;
+.filter__content {
+    position:relative
 }
 
-.filters__close{
-  position: absolute;
-  top: 0.1rem;
-  right: 0.1rem;
-  font-size: 2rem;
-  border: 0;
+.filter__close {
+   position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1rem;
   background-color: white;
   cursor: pointer;
-  z-index: 999;      
+  z-index: 999;
 }
