--- a/src/main.scss
+++ b/src/main.scss
@@ -6,7 +6,8 @@
 @use 'sections/services.scss';
 @use 'sections/footer.scss';
 @use 'sections/challenges.scss';
-@use 'sections/filter.scss';
+@use 'sections/f.scss';
+//@use 'sections/filter.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400..900;1,400..900&display=swap');
 
